@@ -2,7 +2,7 @@
 # OpenMPI install script
 old_version=1.2.9
 default_version=2.0.2
-latest_version=2.1.0rc1
+latest_version=2.1.0
 version=$default_version
 # Cas ou l'on force la version la plus recente:
 [ "$TRUST_FORCE_LATEST_OPENMPI" = 1 ] && version=$latest_version
